# axum-login

axum-login/: Cargo.toml
axum-login/benches/: middleware_comparison.rs
axum-login/src/: backend.rs  jwt.rs  lib.rs  middleware.rs  require.rs  service.rs  session.rs
axum-login/src/require/: builder.rs  predicate.rs  service.rs
axum-login/tests/: feature_gates.rs
docs/: jwt.md
examples/jwt/: Cargo.toml
examples/jwt/src/: main.rs
examples/sqlite/: Cargo.toml
