[package]
name = "axum-login"
version = "0.18.0"
description = "🪪 User identification, authentication, and authorization for Axum."
edition = "2021"
homepage = "https://github.com/maxcountryman/axum-login"
license = "MIT"
keywords = ["authentication", "authorization", "login", "axum", "sessions"]
categories = [
    "web-programming::http-server",
    "web-programming",
    "database",
    "asynchronous",
]
repository = "https://github.com/maxcountryman/axum-login"
documentation = "https://docs.rs/axum-login"
readme = "../README.md"

[features]
# The server-side session path (tower-sessions). Enabled by default; disable
# with `default-features = false` for a JWT-only build that drops
# tower-sessions, tower-cookies, and subtle from the dependency tree.
session = ["dep:tower-sessions", "dep:tower-cookies", "dep:subtle"]
require-builder = ["dep:pin-project"]
macros-middleware = ["require-builder"]
# `jwt` uses jsonwebtoken 10, which requires a crypto backend to be selected
# explicitly (v9's built-in `ring` was removed). We default to the pure-Rust
# `rust_crypto` backend so downstream builds need no C toolchain. Depend on
# `jwt-aws-lc-rs` instead if you want the aws-lc-rs backend.
jwt = ["dep:jsonwebtoken", "dep:serde_json", "jsonwebtoken/rust_crypto"]
jwt-aws-lc-rs = ["dep:jsonwebtoken", "dep:serde_json", "jsonwebtoken/aws_lc_rs"]
default = ["macros-middleware", "jwt"]

[dependencies]
aide = { git = "https://github.com/tamasfe/aide", features = ["macros"] }
axum = { version = "0.8.1", default-features = false, features = [
    "original-uri",
] }
subtle = { version = "2", optional = true }
serde = "1"
thiserror = "2.0.0"
tower-cookies = { version = "0.11.0", optional = true }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions = { version = "0.15", default-features = false, optional = true }
tokio = { version = "1.46.1", default-features = false, features = ["sync"] }
tracing = { version = "0.1.40", features = ["log"] }
urlencoding = "2.1.3"
form_urlencoded = "1.2.1"
pin-project = { version = "1.1.10", optional = true }
jsonwebtoken = { version = "10", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
axum = "0.8.1"
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.13"
reqwest = { version = "0.12", features = ["cookies"] }
serial_test = "3.0.0"
time = "0.3.36"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.5.2"
tower-sessions = { version = "0.15.0", features = ["memory-store"] }

[[bench]]
name = "middleware_comparison"
harness = false
required-features = ["require-builder", "macros-middleware"]
