[package]
name = "example-jwt"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.1"
axum-login = { path = "../../axum-login", features = ["jwt"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
